1.oct (ws)
      - new command: repeat selection: copies current selection and paste it to the
        end of the current selection. Reassigned the shortcut "R" to this command
        (was: repeat last command, which is not that useful)
30.sep (ws)
      - implement copy/paste slurs
      - make "add bracket" undoable
      - fix glissando font size
      - dont show slurs which start in invisible Measure/Staff
      - make changing of MStaff properties undoable
      (la)
      - fix "Mixer only works for first instrument"
      - fix "Instrument sounds not imported from MusicXML"
29.sep (ws)
      - fix boundingRectangle of segno and coda symbols
      - fix: Measure repeat sign always on top when dragged from palette
      - fix capella import crash
      - hack to fix MusicXml export of drum clef
       (la)
      - add support for unpitched percussion in MusicXML export
      - add support for invisible rest/note in MusicXML export
28.sep (ws)
      - fix: in shortcut editor check conflicts against local changed shortcuts
      - fix: add hardcoded F1 shortcut to shortcut editor
      - fix: "Change time signature for single measure"
      - fix: Key signatures do not include natural signs if added in reverse order
       (la)
      - add first support for swing playback
27.sep (ws)
      - change implementation of pitch up/down functions: "up" uses always sharps and
        "down" flats instead of guessing the right pitch spelling
      - add two new functions for note edit mode: "q" reduces the duration of
        the last entered note/rest by half, "w" doubles it
25.sep (ws)
      - note velocity can now be edited in note properties dialog and pianoroll editor
      - forward flip command for beamed chords to beam
24.sep (db)
      - add Polish handbook
      - add default shortcuts for staff text and system text
      (ws)
      - fix: drop symbol to palette
      - more code for pianoroll editor
      (la)