@@ -2,6 +2,9 @@
       - new command: repeat selection: copies current selection and paste it to the
         end of the current selection. Reassigned the shortcut "R" to this command
         (was: repeat last command, which is not that useful)
+      (la)
+      - More work on swing. First 8th is lenghtened. 
+       Second 8th of a group is shortened and shifted.
 30.sep (ws)
       - implement copy/paste slurs
       - make "add bracket" undoable
